# to-synchronize

./: Cargo.toml  README.md
migrations/: 20231207191830_create_users_table.sql  20231207201752_create_todos_table.sql
src/: handlers.rs  lib.rs  main.rs
